partA/makeerror
g++ -std=c++1z -Wconversion -Wall -Werror -Wextra -pedantic -O3 -DNDEBUG -c game.cpp
game.cpp:84:59: error: expected ';' after expression
        cout << "max-random-distance = " << max_rand_dist << "\n":
                                                                 ^
                                                                 ;
1 error generated.
make: *** [game.o] Error 1
